<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screens.authorization.AuthorizationFragment">

    <TextView
        android:id="@+id/logo_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/app_logo_text"
        android:fontFamily="@font/phenomena_bold"
        android:textSize="108sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginTop="140dp"/>

    <ImageView
        android:id="@+id/logo_part_iv"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        app:layout_constraintTop_toBottomOf="@id/logo_tv"
        android:src="@drawable/logo_part"
        android:contentDescription="@string/logo_part_iv_desc" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_et_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/logo_part_iv"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="32dp"
        android:hint="@string/email_et_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_et_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_et_layout"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"
        app:counterEnabled="true"
        app:counterMaxLength="25"
        app:counterTextColor="@color/primary"
        android:hint="@string/password_et_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/enter_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/password_et_layout"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/primary_rectangle_shape"
        android:text="@string/enter_btn_text"
        android:textColor="@color/white"
        android:textSize="14sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registration_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/light_rectangle_shape"
        android:layout_marginHorizontal="48dp"
        android:layout_marginBottom="32dp"
        android:text="@string/registration_btn_text"
        android:textColor="@color/primary"/>
</androidx.constraintlayout.widget.ConstraintLayout>